# bookmark_collector

./: .gitignore  README.md  bookmark_collector_start.sh  docker-compose.yml  setup.cfg
bookmark_collector/: .env.example  Dockerfile  README.md  manage.py  pyproject.toml  schema.yaml
bookmark_collector/api/: permissions.py
bookmark_collector/api/bookmarks/: serializers.py  views.py
bookmark_collector/api/users/: serializers.py  views.py
bookmark_collector/bookmark/: admin.py  apps.py  models.py
bookmark_collector/bookmark/migrations/: 0001_initial.py  0002_alter_bookmark_link_bookmark_unique_link_and_more.py  0002_collection_link.py  0003_bookmark_title.py  0003_rename_link_collection_links.py  0004_alter_collection_name.py  0004_bookmark_type.py  0005_alter_collection_options_alter_bookmark_author_and_more.py  0005_bookmark_description.py  0006_alter_bookmark_options.py  0006_bookmark_image.py  0007_alter_bookmark_description_alter_bookmark_image_and_more.py  0007_remove_bookmark_unique_link_and_more.py
bookmark_collector/bookmark_collector/: settings.py  urls.py  wsgi.py
bookmark_collector/core/: apps.py  enums.py  funcs.py  funks.py  text.py
bookmark_collector/tests/: test_data.py  test_func.py
bookmark_collector/user/: admin.py  models.py
bookmark_collector/user/migrations/: 0001_initial.py  0002_alter_bookmarkuser_options.py
gateway/: nginx.conf
